# BUJA

./: .cursorrules  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMMANDS.md  FIXES_APPLIED.md  README.md  alembic.ini  app.py  docker-compose.local.yml  pyproject.toml  pytest.ini  test_output.txt
.claude/: settings.json
.claude/agents/: analyst.md  builder.md  market_scout.md  portfolio_manager.md  qa.md  risk_officer.md  stock_analyst.md
.claude/commands/: analyze.md  macro.md  news.md  portfolio.md  youtube.md
.cursor/: ARCHITECTURE.md  CURSOR_GUIDE.md  DEVELOPMENT.md  GUIDE_UPDATE.md  MCP_SETUP.md  PROJECT_STRUCTURE_VALIDATION.md  README.md  mcp-servers.json  rules  settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  pr-check.yml
.streamlit/: config.toml
claude-app/: 5대_투자자_철학.md  자산관리_지침.md  투자자_정보.md  투자자_정보_템플릿.md
config/: __init__.py  database.py  logging.py  settings.py
data/: .gitkeep
docs/: AUTONOMOUS_AGENT_IMPLEMENTATION_PLAN.md  AUTONOMOUS_AGENT_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_AGENT_README.md  BASIC_FUNCTIONALITY_TEST_ENHANCEMENT.md  BASIC_FUNCTIONALITY_TEST_FIX_RESULT.md  BASIC_FUNCTIONALITY_TEST_REPORT.md  BASIC_FUNCTIONALITY_TEST_RESULT.md  CODE_VALIDATION_REPORT.md  DATABASE_SUPPORT.md  DESIGN.md  FIX_SQLITE_LOGIN.md  GIT_HOOKS.md  GIT_WORKFLOW.md  KAKAO_NOTIFICATION_DETAIL.md  LOGIN_TROUBLESHOOTING.md  MIGRATION_GUIDE.md  MIGRATION_NOTIFICATION_TABLE.md  NOTIFICATION_DESIGN.md  NVM_INSTALL_GUIDE.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  PLAYWRIGHT_INSTALL_ISSUE.md  PLAYWRIGHT_MCP_FINAL_CHECK.md  PLAYWRIGHT_MCP_FIX.md  PLAYWRIGHT_MCP_STATUS.md  PLAYWRIGHT_MCP_TEST.md  PLAYWRIGHT_MCP_TEST_RESULT.md  PLAYWRIGHT_TEST_COMPLETE.md  PLAYWRIGHT_TEST_READY.md  PLAYWRIGHT_TEST_RESULT.md  PLAYWRIGHT_TEST_STATUS.md  PLAYWRIGHT_TEST_SUCCESS.md  PLAYWRIGHT_UI_TEST_GUIDE.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_VALIDATION.md  README.md  REQUIREMENTS.md  SETUP_DATABASE.md  SIDEBAR_UX_IMPROVEMENT.md  TEST_CODE_VALIDATION.md  (+8 more)
docs/knowledge/: investment_philosophy.md
migrations/: env.py
pages/: .gitkeep  agent_chat.py  dashboard.py  investment_preference.py  login.py  mcp_tools.py  notifications.py  onboarding.py  profile.py  register.py
scripts/: add_chat_project_id_column.py  add_global_portfolio_fields.py  create_admin_user.py  create_initial_migration.py  init_sqlite_db.py  run_playwright_test.ps1  run_playwright_test_ui.ps1  setup_git_hooks.ps1  setup_git_hooks.sh  setup_local_db.ps1  setup_local_db.sh  start_background_worker.py  start_streamlit.bat  start_streamlit.ps1  validate_setup.py
src/: __init__.py  exceptions.py
src/agents/: __init__.py  advisor.py  autonomous_investment_agent.py  base_agent.py  investment_agent.py  orchestrator.py
src/analyzers/: __init__.py  asset_allocator.py  performance_analyzer.py  portfolio_analyzer.py  risk_analyzer.py
src/data/: news_fetcher.py  nh_fetcher.py  stock_fetcher.py  youtube_fetcher.py
src/middleware/: __init__.py  auth_middleware.py  error_handler.py
src/models/: __init__.py  base.py  chat.py  chat_project.py  financial.py  investment.py  notification.py  portfolio.py  user.py
src/repositories/: __init__.py  base_repository.py  chat_project_repository.py  chat_repository.py  investment_repository.py  notification_repository.py  portfolio_repository.py  user_repository.py
src/services/: __init__.py  chat_project_service.py  chat_service.py  currency_hedge_service.py  email_notification_service.py  goal_tracking_service.py  investment_preference_service.py  investment_service.py  mcp_tool_service.py  notification_service.py  portfolio_monitoring_service.py  portfolio_service.py  recommendation_service.py  scheduler_service.py  screenshot_service.py  user_service.py
src/utils/: __init__.py  async_helpers.py  chat_ui.py  converters.py  formatters.py  security.py  sidebar.py  validators.py
tests/: SCENARIO_TEST_GUIDE.md  __init__.py  conftest.py  verify_core.py
tests/e2e/: README.md  README_UI_TESTS.md  RUN_UI_TESTS.md  UI_TEST_RESULTS.md  __init__.py  conftest.py  run_playwright_ui_test.py  run_ui_test.sh  test_autologin.py  test_autologin_check.py  test_autologin_detailed.py  test_chat_history_persistence.py  test_chat_persistence.py  test_chat_streaming.py  test_check_dom.py  test_final_sidebar.py  test_final_sidebar_check.py  test_login_detailed.py  test_login_persistence.py  test_login_ui.py  test_onboarding_scenario.py  test_playwright_mcp_connection.py  test_playwright_python.py  test_scenario_korean_response.py  test_sidebar_ux.py  test_streamlit_dashboard.py  test_streamlit_full_flow.py  test_streamlit_login.py  test_streamlit_main.py  test_streamlit_register.py  test_ui_autonomous_agent.py  test_ui_check.py  test_ui_comprehensive.py  test_ui_functionality.py  test_ui_goal_tracking.py  test_ui_integration.py  test_ui_notification.py  test_ui_portfolio_monitoring.py  test_user_scenario.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_global_portfolio_scenarios.py  test_portfolio_monitoring_scenarios.py
tests/unit/: __init__.py  test_agents.py  test_analyzers.py  test_async_helpers.py  test_auth_middleware.py  test_basic_functionality.py  test_chat_project_service.py  test_chat_service.py  test_global_portfolio.py  test_goal_tracking_service.py  test_investment_preference_service.py  test_investment_service.py  test_llm_client.py  test_models.py  test_notification_service.py  test_portfolio_service.py  (+6 more)
(+13 files in other folders)
