[project]
name = "buja"
version = "0.1.0"
description = "BUJA - AI 자산관리 어드바이저"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32.0",
    "anthropic>=0.25.0",
    "yfinance>=0.2.38",
    "feedparser>=6.0.11",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "pandas>=2.2.0",
    "plotly>=5.20.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
